unpackaged/main/default/objects/Contact_Staging__c/Contact_Staging__c.object-meta.xml
<CustomObject>
    <label>Contact Staging</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Contact Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>