unpackaged/main/default/objects/Contact_Staging__c/fields/B2C_CustomerList__c.field-meta.xml
<CustomField>
    <fullName>B2C_CustomerList__c</fullName>
    <label>B2C CustomerList</label>
    <length>250</length>
    <type>Text</type>
</CustomField>