unpackaged/main/default/objects/Contact_Staging__c/fields/B2C_Disable_Integration__c.field-meta.xml
<CustomField>
    <fullName>B2C_Disable_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>B2C Disable Integration</label>
    <type>Checkbox</type>
</CustomField>