unpackaged/main/default/objects/Contact_Staging__c/fields/B2C_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>B2C_Integration_Status__c</fullName>
    <label>B2C Integration Status</label>
    <length>250</length>
    <type>Text</type>
</CustomField>