unpackaged/main/default/objects/Contact_Staging__c/fields/B2C_Is_Enabled__c.field-meta.xml
<CustomField>
    <fullName>B2C_Is_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>B2C Is Enabled</label>
    <type>Checkbox</type>
</CustomField>