unpackaged/main/default/objects/Contact_Staging__c/fields/b2ccrm_syncStatus__c.field-meta.xml
<CustomField>
    <fullName>b2ccrm_syncStatus__c</fullName>
    <label>b2ccrm_syncStatus</label>
    <length>100</length>
    <type>Text</type>
</CustomField>