unpackaged/main/default/objects/Contact_Staging__c/fields/Brand_ID__c.field-meta.xml
<CustomField>
    <fullName>Brand_ID__c</fullName>
    <label>Brand ID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brand_Id</valueSetName>
    </valueSet>
</CustomField>