unpackaged/main/default/objects/Contact_Staging__c/fields/BulkBuyer__c.field-meta.xml
<CustomField>
    <fullName>BulkBuyer__c</fullName>
    <formula>IF( Bulk_Buyer__c = true , &quot;true&quot;, &quot;false&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BulkBuyer</label>
    <type>Text</type>
</CustomField>