unpackaged/main/default/objects/Contact_Staging__c/fields/CustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>CustomerNumber__c</fullName>
    <label>Customer Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>