unpackaged/main/default/objects/Contact_Staging__c/fields/DeceasedFRML__c.field-meta.xml
<CustomField>
    <fullName>DeceasedFRML__c</fullName>
    <formula>IF( Deceased__c = true, &quot;true&quot;, &quot;false&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deceased</label>
    <type>Text</type>
</CustomField>