unpackaged/main/default/objects/Contact_Staging__c/fields/FraudFRML__c.field-meta.xml
<CustomField>
    <fullName>FraudFRML__c</fullName>
    <formula>IF( Fraud__c = true, &quot;true&quot;, &quot;false&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fraud</label>
    <type>Text</type>
</CustomField>