unpackaged/main/default/objects/Contact_Staging__c/fields/isLoyaltyVerified__c.field-meta.xml
<CustomField>
    <fullName>isLoyaltyVerified__c</fullName>
    <defaultValue>true</defaultValue>
    <label>isLoyaltyVerified</label>
    <type>Checkbox</type>
</CustomField>