unpackaged/main/default/objects/Contact_Staging__c/fields/Latest_Source__c.field-meta.xml
<CustomField>
    <fullName>Latest_Source__c</fullName>
    <label>Latest Source</label>
    <length>20</length>
    <type>Text</type>
</CustomField>