unpackaged/main/default/objects/Contact_Staging__c/fields/Loyalty_Flag__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loyalty Flag</label>
    <type>Checkbox</type>
</CustomField>