unpackaged/main/default/objects/Contact_Staging__c/fields/Loyalty_ID__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_ID__c</fullName>
    <label>Loyalty ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>