unpackaged/main/default/objects/Contact_Staging__c/fields/LoyaltyOptInDate1__c.field-meta.xml
<CustomField>
    <fullName>LoyaltyOptInDate1__c</fullName>
    <formula>TEXT(Loyalty_Optin_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LoyaltyOptInDate1</label>
    <type>Text</type>
</CustomField>