unpackaged/main/default/objects/Contact_Staging__c/fields/SFSCAccountId__c.field-meta.xml
<CustomField>
    <fullName>SFSCAccountId__c</fullName>
    <label>SFSC Account Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>