unpackaged/main/default/objects/Contact_Staging__c/fields/Subscriber_Key__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>WCS Subscriber Key</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>