unpackaged/main/default/objects/Contact_Staging__c/fields/UpdatePointBalance__c.field-meta.xml
<CustomField>
    <fullName>UpdatePointBalance__c</fullName>
    <label>UpdatePointBalance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>