unpackaged/main/default/objects/Contact_Staging__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Email_Optin_Status__c</columns>
    <columns>CustomerNumber__c</columns>
    <columns>Bulk_Buyer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>